2006-02-15  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed location of sv/misc/fantastic.ogg

	* boards/sounds/sv/geography/fantastic.ogg:
	* boards/sounds/sv/misc/fantastic.ogg:

2006-02-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Updated, created screenshots of new activities.

	* boards/crane.xml.in:
	* boards/electric/variable_resistor.svg:
	* boards/fifteen.xml.in:
	* boards/hanoi.xml.in:
	* boards/hanoi_real.xml.in:
	* boards/paintings.xml.in:
	* boards/puzzle.xml.in:
	* boards/sudoku.xml.in:
	* boards/superbrain.xml.in:
	* boards/tangram.xml.in:
	* boards/traffic.xml.in:
	* docs/screenshots/awele.jpg:
	* docs/screenshots/awele_small.jpg:
	* docs/screenshots/colors.jpg:
	* docs/screenshots/colors1.jpg:
	* docs/screenshots/colors_small.jpg:
	* docs/screenshots/crane.jpg:
	* docs/screenshots/crane_small.jpg:
	* docs/screenshots/electric.jpg:
	* docs/screenshots/electric_small.jpg:
	* docs/take_screenshots.sh:

2006-02-12  Bruno coudoin  <bruno.coudoin@free.fr>

	* po/POTFILES.in: added missing melody.py

	*** RELEASE 7.3RC1 ***

2006-02-11  Bruno coudoin  <bruno.coudoin@free.fr>
	
	* boards/awele.xml.in:
	* gcompris.spec.in:
	* src/boards/Makefile.am:
	* configure.in:
	* src/gcompris/gcompris_db.c: (gcompris_db_init): patch by Yves from 7.4 branch to remove sqlite
	  database if it is empty.

2006-02-11  Bruno coudoin  <bruno.coudoin@free.fr>

	New icons from Franck Doucet.
	
	* boards/boardicons/eye_colors.png:
	* boards/boardicons/geometry.png:
	* boards/boardicons/memory_elephant.png:
	* boards/boardicons/submarine.png:
	* boards/gtans/gtans_2x-rotate-left.png:
	* boards/gtans/gtans_2x-rotate.png:
	* boards/gtans/gtans_outline.png:
	* boards/gtans/gtans_rotate-left.png:
	* boards/gtans/gtans_rotate.png:
	* boards/gtans/gtans_show.png:
	* boards/submarine/submarine-broken.png:
	* boards/submarine/submarine.png:
	* src/boards/gtans_interface.c: (create_mainwindow):

2006-02-08  Bruno coudoin  <bruno.coudoin@free.fr>
