@@ -1,3 +1,8 @@
+2006-02-17  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* docs/spip_screenshot_remove.pl: new tool to remove old screenshots article
+	  from a previous SPIP dump.
+
 2006-02-15  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Fixed location of sv/misc/fantastic.ogg
